--- a/CarGallery/CarGallery.csproj
+++ b/CarGallery/CarGallery.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -68,6 +69,24 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Commands\RelayCommand.cs" />
+    <Compile Include="DataAccess\SqlServer\BanTypesRepository.cs" />
+    <Compile Include="DataAccess\SqlServer\BrandsRepository.cs" />
+    <Compile Include="DataAccess\SqlServer\CarColorsRepository.cs" />
+    <Compile Include="DataAccess\SqlServer\CarsRepository.cs" />
+    <Compile Include="DataAccess\SqlServer\DataClasses1.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataClasses1.dbml</DependentUpon>
+    </Compile>
+    <Compile Include="DataAccess\SqlServer\ImagePathRepository.cs" />
+    <Compile Include="DataAccess\SqlServer\PetrolTypeRepository.cs" />
+    <Compile Include="Domain\Abstractions\IBanTypeRepository.cs" />
+    <Compile Include="Domain\Abstractions\IBrandsRepostory.cs" />
+    <Compile Include="Domain\Abstractions\ICarColorsRepository.cs" />
+    <Compile Include="Domain\Abstractions\ICarsRepository.cs" />
+    <Compile Include="Domain\Abstractions\IImagePathRepository.cs" />
+    <Compile Include="Domain\Abstractions\IPetrolTypeRepository.cs" />
+    <Compile Include="Domain\Abstractions\IRepository.cs" />
     <Compile Include="Domain\AdditionalClasses\ObserverHelper.cs" />
     <Compile Include="Domain\ViewModels\BaseViewModel.cs" />
     <Compile Include="Domain\ViewModels\FilterUserControlViewModel.cs" />
@@ -97,6 +116,14 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="DataAccess\SqlServer\DataClasses1.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>DataClasses1.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DataAccess\SqlServer\DataClasses1.dbml.layout">
+      <DependentUpon>DataClasses1.dbml</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -105,9 +132,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="DataAccess\SqlServer\" />
-    <Folder Include="Domain\Abstractions\" />
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
