--- a/CarGallery/App.config
+++ b/CarGallery/App.config
@@ -3,8 +3,9 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="CarGallery.Properties.Settings.CarGalleryDbConnectionString"
-            connectionString="Data Source=STHQ0126-15;Initial Catalog=CarGalleryDb;User ID=admin;Password=admin;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
+   
+        <add name="CarGallery.Properties.Settings.CarGalleryDbConnectionString1"
+            connectionString="Data Source=STHQ011A-14;Initial Catalog=CarGalleryDb;User ID=admin;Password=admin;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
