--- a/CarGallery/App.config
+++ b/CarGallery/App.config
@@ -2,12 +2,11 @@
 <configuration>
     <configSections>
     </configSections>
-    <connectionStrings>
-   
-        <add name="CarGallery.Properties.Settings.CarGalleryDbConnectionString1"
-            connectionString="Data Source=STHQ011A-14;Initial Catalog=CarGalleryDb;User ID=admin;Password=admin;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
+		<connectionStrings>
+			<add name="MyConnString" connectionString="Data Source=ROGSTRIX;Initial Catalog=CarGalleryDb;Integrated Security=True; ">
+			</add>
+		</connectionStrings>
+        
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
