--- a/CarGallery/App.config
+++ b/CarGallery/App.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
 		<connectionStrings>
-			<add name="MyConnString" connectionString="Data Source=ROGSTRIX;Initial Catalog=CarGalleryDb;Integrated Security=True; ">
+			<add name="MyConnString" connectionString="Data Source=STHQ0126-15;Initial Catalog=CarGalleryDb;User ID=admin;Password=admin;">
 			</add>
 		</connectionStrings>
         
